--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,4 @@
-{
-background-image:url('pink dust');
-background-attachment:fixed;
-margin-bottom:0px;
-}@import url(font-awesome.min.css);
+@import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 
 /*
